* Added a new variable $button-line-height to set the line height of .button classes
* Remove unnecessary position relative from grid column
* Added variables to set h1-h6 font weight, margins and line height
* Added more control over the default button class by adding:
    - $button-default-border-color
    - $button-default-font-color
    - $button-border-width
* Added new code variables:
    - $code-border-width
    - $code-border-color
    - $code-inline-padding
    - $code-block-padding
* Added new hr variables:
    - $hr-border-width
    - $hr-border-color
    - $hr-margin
* Added new table variable:
    - $table-border-width
* Added blockquote variables:
    - $blockquote-padding-x
    - $blockquote-padding-y
    - $blockquote-border-left-width
    - $blockquote-border-left-color

1.7.1 - 23-Jan-2018
~~~~~~~~~~~~~~~~~~~

* Remove undocumented css from radios and checkboxes
* Added input placeholder color style
* Added new table variables
    - $table-background-color
    - $table-border-color
    - $table-font-size

1.7.0 - 11-Jan-2018
~~~~~~~~~~~~~~~~~~~

* You only now need to define additional or overwrite existing colours and buttons within your variables.
* Added a new mixin flip to flip an element on it's x/y/both axis's
* Added new css helpers:
    - .flip-x
    - .flip-y
    - .flip-both
* Fix bug with anchor transition speed using wrong variable
* Three new variables have been created to control transitions:
    - $link-transition
    - $button-transition
    - $input-transition
* ul and ol styles are now in the variables

* BREAKING CHANGES
    - Mixin 'abs-position' renamed to 'position' and has additional optional parameter $position
        - @mixin position($top: auto, $right: auto, $bottom: auto, $left: auto, $position: absolute)
    - Mixin 'vertical-align' has been replaced with 'centerer'
        - @mixin centerer($horizontal: true, $vertical: true, $position: absolute)

* DEPRECIATED VARIABLES 
    - $link-transition-speed