@@ -175,6 +175,7 @@ $buttons: map-merge((
 ), $buttons);
 
 $button-border-width:           $border-width !default;
+$button-border-radius:          $global-radius !default;
 $button-font-size:              1.5rem !default;
 $button-font-weight:            400 !default;
 $button-line-height:            1.5 !default;        
@@ -235,6 +236,7 @@ $table-striped-color:           rgb(250, 250, 250) !default;
 // code
 $code-border-width:             $border-width !default;
 $code-border-color:             $border-color !default;
+$code-border-radius:            $global-radius !default;
 $code-background:               rgb(240, 240, 240) !default;
 $code-inline-padding:           .2rem .5rem !default;
 $code-block-padding:            1rem 1.5rem !default;
