@@ -14,7 +14,7 @@
     text-decoration: none;
     white-space: nowrap;
     background-color: $button-default-bg-color;
-    border-radius: $global-radius;
+    border-radius: $button-border-radius;
     border: $button-border-width solid $button-default-border-color;
     cursor: pointer;
     box-sizing: border-box;
